2013-01-08 Dario Rodriguez <dario.rodriguez@artica.es>

	* extensions/system_info.php: Added link to download System info file.

2013-01-08 Juan Manuel Ramon <juanmanuel.ramon@artica.es>

	* godmode/agentes/agent_template.php: Fixed duplication of modules
	when template is applied several times. 
	
	Merged from trunk.

2013-01-08 Dario Rodriguez <dario.rodriguez@artica.es>

	* godmode/agentes/module_manager_editor_common.php: Fixed an error 
	adding tags on module creation.

2013-01-08 Dario Rodriguez <dario.rodriguez@artica.es>

	* include/functions_config.php: Delete option to disable/enable events
	on inventory changes because there is a blacklist implemented.

2013-01-08 Dario Rodriguez <dario.rodriguez@artica.es>

	* include/functions_config.php: Added new option to disable/enable events
	on inventory changes.

2013-01-08 Dario Rodriguez <dario.rodriguez@artica.es>

	* godmode/agentes/module_manager.php: changed text from Libray to Library

2013-01-08 Dario Rodriguez <dario.rodriguez@artica.es>

	* godmode/reporting/reporting_builder.php: Deleted a wrong code related to
	cover update.

2013-01-08 Dario Rodriguez <dario.rodriguez@artica.es>

	* include/help/es/help_reporting_advanced_tab.php,
	include/help/ja/help_reporting_advanced_tab.php,
	include/help/en/help_reporting_advanced_tab.php: Documented the new
	macro for cover page.

2013-01-08 Dario Rodriguez <dario.rodriguez@artica.es>

	* godmode/reporting/reporting_builder.php: Added a default cover page
	to PDF reports.

2013-01-08 Dario Rodriguez <dario.rodriguez@artica.es>

	* godmode/agentes/module_manager.php: Foxed an error in html
	of link to module library

2013-01-07  Hirofumi Kosaka  <kosaka@rworks.jp>

	* godmode/reporting/graph_builder.php: Fixed bug that
	unspecified graph name was displayed in the header line
	when creating a new custom graph.

2013-01-05 Sancho Lerena <slerena@artica.es>

	* include/styles/pandora.css: Fixed footer problem
	in Chrome. 
